apps/base/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
